--- a/cDMD_kutz.ipynb
+++ b/cDMD_kutz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,37 +13,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.loadtxt('DMDdata200.csv', delimiter=',')"
+    "data_kutz = np.loadtxt('kutz.csv', delimiter=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x1 = data[0:,1:-1]\n",
-    "x2 = data[0:,2:]"
+    "x1 = data_kutz[0:,1:-1]\n",
+    "x2 = data_kutz[0:,2:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_shape = (x1.shape[1], x1.shape[0])\n",
     "percent_Trunc = 0.90\n",
-    "frame_rate = 1/2.5e-05"
+    "# frame_rate = 1/2.5e-05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9041896208319737, 1)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "menergyc = 0.0\n",
     "for i in range(0, np.size(Sc)):\n",
@@ -93,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,18 +114,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 1)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Atildec.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sumuk\\AppData\\Local\\Temp\\ipykernel_11908\\763208485.py:2: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  bc = np.linalg.lstsq(phic, x1[:, 0])\n"
+     ]
+    }
+   ],
    "source": [
     "phic = x2 @ Vc[:rc, :].T @ np.diag(np.reciprocal(Sc[: rc])) @ eivVecc\n",
     "bc = np.linalg.lstsq(phic, x1[:, 0])\n",
@@ -124,16 +156,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1,), (178702, 1), (1, 1), (1, 1))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bc[0].shape, phic.shape, vandermodeVc.shape, eivarrayc.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,18 +187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "S[:r]#.shape, S[: rc].shape, V[:, :rc].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9229507984443635, 2)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "menergy = 0.0\n",
     "for i in range(0, np.size(S)):\n",
@@ -169,16 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "U.shape, S.shape, V.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,9 +224,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sumuk\\AppData\\Local\\Temp\\ipykernel_11908\\3731244738.py:3: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  b = np.linalg.lstsq(phi, x1[:, 0]) # Compute amplitudes\n"
+     ]
+    }
+   ],
    "source": [
     "phi = x2 @ V[:r, :].T @ np.diag(np.reciprocal(S[: r])) @ eivVec.real # Compute full-state modes of X\n",
     "eivarray = np.diag(eivVal)\n",
@@ -200,36 +246,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((2,), (178702, 2), (2, 2), (2, 2))"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b[0].shape, phi.shape, vandermodeV.shape, eivarray.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.00379588],\n",
+       "       [-0.00379413],\n",
+       "       [-0.00379202],\n",
+       "       [-0.00378974],\n",
+       "       [-0.00378737],\n",
+       "       [-0.00378485],\n",
+       "       [-0.00378226],\n",
+       "       [-0.00377952],\n",
+       "       [-0.00377671],\n",
+       "       [-0.00377376]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phi[:10, :1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.00029563],\n",
+       "       [0.00029549],\n",
+       "       [0.00029533],\n",
+       "       [0.00029515],\n",
+       "       [0.00029497],\n",
+       "       [0.00029477],\n",
+       "       [0.00029457],\n",
+       "       [0.00029436],\n",
+       "       [0.00029414],\n",
+       "       [0.00029391]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phic[:10, :1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.07785325345792268"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# diff_nrm = np.linalg.norm(phic - phi[:, :16])\n",
     "# n_phic = np.linalg.norm(phic)\n",
@@ -238,9 +346,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4143370022266508"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# n_phi = np.linalg.norm(phi)\n",
     "np.linalg.norm(phi)"
@@ -248,16 +367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "diff = phic[:, :4] - phi[:, :4]"
+    "diff = phic - phi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,9 +385,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.005474622854270715"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "n_diff_vec = np.linalg.norm(diff_vec, np.inf)\n",
     "n_diff_vec"
@@ -276,18 +406,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "phic_vec = np.reshape(phic[:, :4], (phic.shape[0]*phic.shape[1], 1))"
+    "phic_vec = np.reshape(phic, (phic.shape[0]*phic.shape[1], 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00036983738665871197"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "n_phic_vec = np.linalg.norm(phic_vec, np.inf)\n",
     "n_phic_vec"
@@ -295,18 +436,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "phi_vec = np.reshape(phi[:, :4], (phi.shape[0]*phi.shape[1], 1))"
+    "phi_vec = np.reshape(phi, (phi.shape[0]*phi.shape[1], 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.005479599148626223"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "n_phi_vec = np.linalg.norm(phi_vec, np.inf)\n",
     "n_phi_vec"
@@ -314,11 +466,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3438.3293338130843"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np.linalg.norm(data[:, 1:])"
+    "np.linalg.norm(data_kutz)"
    ]
   },
   {
