--- a/cDMD_vort.ipynb
+++ b/cDMD_vort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,37 +13,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.loadtxt('DMDdata200.csv', delimiter=',')"
+    "data_vort = np.loadtxt('vortall.csv', delimiter=',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x1 = data[0:,1:-1]\n",
-    "x2 = data[0:,2:]"
+    "x1 = data_vort[0:,1:-1]\n",
+    "x2 = data_vort[0:,2:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_shape = (x1.shape[1], x1.shape[0])\n",
     "percent_Trunc = 0.90\n",
-    "frame_rate = 1/2.5e-05"
+    "# frame_rate = 1/2.5e-05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,9 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9246869492856535, 5)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "menergyc = 0.0\n",
     "for i in range(0, np.size(Sc)):\n",
@@ -93,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,18 +114,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 5)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Atildec.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sumuk\\AppData\\Local\\Temp\\ipykernel_15916\\763208485.py:2: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  bc = np.linalg.lstsq(phic, x1[:, 0])\n"
+     ]
+    }
+   ],
    "source": [
     "phic = x2 @ Vc[:rc, :].T @ np.diag(np.reciprocal(Sc[: rc])) @ eivVecc\n",
     "bc = np.linalg.lstsq(phic, x1[:, 0])\n",
@@ -124,16 +156,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((5,), (89351, 5), (5, 5), (5, 5))"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bc[0].shape, phic.shape, vandermodeVc.shape, eivarrayc.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,18 +187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "S[:r]#.shape, S[: rc].shape, V[:, :rc].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.926728349335928, 5)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "menergy = 0.0\n",
     "for i in range(0, np.size(S)):\n",
@@ -169,16 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "U.shape, S.shape, V.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,9 +224,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sumuk\\AppData\\Local\\Temp\\ipykernel_15916\\3731244738.py:3: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  b = np.linalg.lstsq(phi, x1[:, 0]) # Compute amplitudes\n"
+     ]
+    }
+   ],
    "source": [
     "phi = x2 @ V[:r, :].T @ np.diag(np.reciprocal(S[: r])) @ eivVec.real # Compute full-state modes of X\n",
     "eivarray = np.diag(eivVal)\n",
@@ -200,36 +246,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((5,), (89351, 5), (5, 5), (5, 5))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b[0].shape, phi.shape, vandermodeV.shape, eivarray.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.16963974e-17],\n",
+       "       [2.19650832e-17],\n",
+       "       [2.21757694e-17],\n",
+       "       [2.23036786e-17],\n",
+       "       [2.25522425e-17],\n",
+       "       [2.28639167e-17],\n",
+       "       [2.32631250e-17],\n",
+       "       [2.35494721e-17],\n",
+       "       [2.39200933e-17],\n",
+       "       [2.44456103e-17]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phi[:10, :1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6.45498099e-19+0.j],\n",
+       "       [6.57672037e-19+0.j],\n",
+       "       [6.71083946e-19+0.j],\n",
+       "       [6.76960461e-19+0.j],\n",
+       "       [6.85079181e-19+0.j],\n",
+       "       [6.98482293e-19+0.j],\n",
+       "       [7.12159426e-19+0.j],\n",
+       "       [7.19990723e-19+0.j],\n",
+       "       [7.48380479e-19+0.j],\n",
+       "       [7.89286831e-19+0.j]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phic[:10, :1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.19021367239943066"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# diff_nrm = np.linalg.norm(phic - phi[:, :16])\n",
     "# n_phic = np.linalg.norm(phic)\n",
@@ -238,9 +346,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1997403627886194"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# n_phi = np.linalg.norm(phi)\n",
     "np.linalg.norm(phi)"
@@ -248,16 +367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "diff = phic[:, :4] - phi[:, :4]"
+    "diff = phic - phi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,9 +385,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05841361565256178"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "n_diff_vec = np.linalg.norm(diff_vec, np.inf)\n",
     "n_diff_vec"
@@ -276,18 +406,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "phic_vec = np.reshape(phic[:, :4], (phic.shape[0]*phic.shape[1], 1))"
+    "phic_vec = np.reshape(phic, (phic.shape[0]*phic.shape[1], 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.005178916245949102"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "n_phic_vec = np.linalg.norm(phic_vec, np.inf)\n",
     "n_phic_vec"
@@ -295,18 +436,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "phi_vec = np.reshape(phi[:, :4], (phi.shape[0]*phi.shape[1], 1))"
+    "phi_vec = np.reshape(phi, (phi.shape[0]*phi.shape[1], 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0601832939590574"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "n_phi_vec = np.linalg.norm(phi_vec, np.inf)\n",
     "n_phi_vec"
@@ -314,11 +466,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4106.406307311165"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np.linalg.norm(data[:, 1:])"
+    "np.linalg.norm(data_vort)"
    ]
   },
   {
