--- a/cDMD_vort.ipynb
+++ b/cDMD_vort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 422,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 423,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,28 +22,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x1 = data_vort[0:,1:-1]\n",
-    "x2 = data_vort[0:,2:]"
+    "x1 = data_vort[:,:-1]\n",
+    "x2 = data_vort[:,1:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_shape = (x1.shape[1], x1.shape[0])\n",
     "percent_Trunc = 0.90\n",
-    "# frame_rate = 1/2.5e-05"
+    "frame_rate = 1/2.5e-05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,32 +66,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cDMD\n",
-    "\n",
-    "[Uc, Sc, Vc] = np.linalg.svd(y1, full_matrices=False, compute_uv=True, hermitian=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.9246869492856535, 5)"
+       "(150, 89351)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 428,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "C_gaussian.shape# = np.dot(np.linalg.pinv(x1), y1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 429,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0721282958984375\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cDMD\n",
+    "\n",
+    "start = 0\n",
+    "end = 0\n",
+    "import time\n",
+    "start = time.time()\n",
+    "\n",
+    "[Uc, Sc, Vc] = np.linalg.svd(y1, full_matrices=False, compute_uv=True, hermitian=False)\n",
+    "\n",
     "menergyc = 0.0\n",
     "for i in range(0, np.size(Sc)):\n",
     "    menergyc += Sc[i]/np.sum(Sc)\n",
@@ -99,109 +114,40 @@
     "        break\n",
     "    rc = i\n",
     "    \n",
-    "menergyc, rc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "menergyc, rc\n",
+    "\n",
     "Atildec = Uc[:, :rc].T @ y2 @ Vc[:, :rc] * np.reciprocal(Sc[: rc])\n",
-    "[eivValc,eivVecc] = np.linalg.eig(Atildec)"
+    "[eivValc,eivVecc] = np.linalg.eig(Atildec)\n",
+    "\n",
+    "phic = x2 @ Vc[:rc, :].T @ np.diag(np.reciprocal(Sc[: rc])) @ eivVecc\n",
+    "\n",
+    "end = time.time()\n",
+    "print(end - start)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(5, 5)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Atildec.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sumuk\\AppData\\Local\\Temp\\ipykernel_15916\\763208485.py:2: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  bc = np.linalg.lstsq(phic, x1[:, 0])\n"
+      "1.8778877258300781\n"
      ]
     }
    ],
    "source": [
-    "phic = x2 @ Vc[:rc, :].T @ np.diag(np.reciprocal(Sc[: rc])) @ eivVecc\n",
-    "bc = np.linalg.lstsq(phic, x1[:, 0])\n",
-    "vandermodeVc = np.vander(eivValc)\n",
-    "eivarrayc = np.diag(eivValc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((5,), (89351, 5), (5, 5), (5, 5))"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "bc[0].shape, phic.shape, vandermodeVc.shape, eivarrayc.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# DMD\n",
     "\n",
-    "[U, S, V] = np.linalg.svd(x1, full_matrices=False, compute_uv=True, hermitian=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.926728349335928, 5)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "start = 0\n",
+    "end = 0\n",
+    "import time\n",
+    "start = time.time()\n",
+    "\n",
+    "[U, S, V] = np.linalg.svd(x1, full_matrices=False, compute_uv=True, hermitian=False)\n",
+    "\n",
     "menergy = 0.0\n",
     "for i in range(0, np.size(S)):\n",
     "    menergy += S[i]/np.sum(S)\n",
@@ -209,341 +155,15 @@
     "        break\n",
     "    r = i\n",
     "    \n",
-    "menergy, r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "menergy, r\n",
+    "\n",
     "Atilde = U[:, :r].T @ x2 @ V[:, :r] * np.reciprocal(S[: r])\n",
-    "[eivVal,eivVec] = np.linalg.eig(Atilde)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\sumuk\\AppData\\Local\\Temp\\ipykernel_15916\\3731244738.py:3: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  b = np.linalg.lstsq(phi, x1[:, 0]) # Compute amplitudes\n"
-     ]
-    }
-   ],
-   "source": [
+    "[eivVal,eivVec] = np.linalg.eig(Atilde)\n",
+    "\n",
     "phi = x2 @ V[:r, :].T @ np.diag(np.reciprocal(S[: r])) @ eivVec.real # Compute full-state modes of X\n",
-    "eivarray = np.diag(eivVal)\n",
-    "b = np.linalg.lstsq(phi, x1[:, 0]) # Compute amplitudes\n",
-    "vandermodeV = np.vander(eivVal) # Vandermonde matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((5,), (89351, 5), (5, 5), (5, 5))"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b[0].shape, phi.shape, vandermodeV.shape, eivarray.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[2.16963974e-17],\n",
-       "       [2.19650832e-17],\n",
-       "       [2.21757694e-17],\n",
-       "       [2.23036786e-17],\n",
-       "       [2.25522425e-17],\n",
-       "       [2.28639167e-17],\n",
-       "       [2.32631250e-17],\n",
-       "       [2.35494721e-17],\n",
-       "       [2.39200933e-17],\n",
-       "       [2.44456103e-17]])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "phi[:10, :1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[6.45498099e-19+0.j],\n",
-       "       [6.57672037e-19+0.j],\n",
-       "       [6.71083946e-19+0.j],\n",
-       "       [6.76960461e-19+0.j],\n",
-       "       [6.85079181e-19+0.j],\n",
-       "       [6.98482293e-19+0.j],\n",
-       "       [7.12159426e-19+0.j],\n",
-       "       [7.19990723e-19+0.j],\n",
-       "       [7.48380479e-19+0.j],\n",
-       "       [7.89286831e-19+0.j]])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "phic[:10, :1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.19021367239943066"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# diff_nrm = np.linalg.norm(phic - phi[:, :16])\n",
-    "# n_phic = np.linalg.norm(phic)\n",
-    "np.linalg.norm(phic)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.1997403627886194"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# n_phi = np.linalg.norm(phi)\n",
-    "np.linalg.norm(phi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diff = phic - phi"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diff_vec = np.reshape(diff, (diff.shape[0]*diff.shape[1], 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.05841361565256178"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n_diff_vec = np.linalg.norm(diff_vec, np.inf)\n",
-    "n_diff_vec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phic_vec = np.reshape(phic, (phic.shape[0]*phic.shape[1], 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.005178916245949102"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n_phic_vec = np.linalg.norm(phic_vec, np.inf)\n",
-    "n_phic_vec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phi_vec = np.reshape(phi, (phi.shape[0]*phi.shape[1], 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0601832939590574"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n_phi_vec = np.linalg.norm(phi_vec, np.inf)\n",
-    "n_phi_vec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4106.406307311165"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linalg.norm(data_vort)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DMD\n",
     "\n",
-    "# [U, S, V] = np.linalg.svd(y1, full_matrices=False, compute_uv=True, hermitian=False)\n",
-    "# Atilde = U[:, : r].conj().T @ y2 @ V[:r, :].conj().T * np.reciprocal(S[: r])\n",
-    "# U[:, : r].conj().T @ np.dot(x2.T, x2) @ V[: r, :].conj().T * np.reciprocal(S[: r])\n",
-    "# Atilde = np.dot(Atilde.T, Atilde)\n",
-    "# [eivVal,eivVec] = np.linalg.eig(Atilde)\n",
-    "# eivVal_sorted = -np.sort(-eivVal)\n",
-    "# eivarray = np.diag(eivVal)\n",
-    "# psi = y2 @ V[:r, :].conj().T @ np.diag(np.reciprocal(S[: r])) @ eivVec # / np.tile(np.transpose(eivarray),(np.size(y1,1),1)) \n",
-    "# d = X1, y1[:,0] # scales\n",
-    "# d = np.linalg.solve(X1.T.dot(X1), X1.T.dot(y1))\n",
-    "# amplitude = np.abs(d)\n",
-    "# X=X1*np.diag(d) # scaled DMD modes\n",
-    "# sp_modes = y2 @ V[:r, :].conj().T @ np.diag(np.reciprocal(S[: r])) @ eivVec\n",
-    "# A = psi @ np.diag(eivVal) #@ np.linalg.pinv(X1)\n",
-    "# end of DMD"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# modeNorm = np.zeros(r)\n",
-    "# for i in range(0, r-1):\n",
-    "#     modeNorm[i] = np.linalg.norm(X[:,i]) # norm of each mode\n",
-    "\n",
-    "# mag = np.absolute(eivarray)\n",
-    "# weigh = mag[1:-1]/np.sum(mag)\n",
-    "# delta_t = 1/frame_rate   \n",
-    "# omega = np.log(eivarray)/delta_t\n",
-    "# growth = np.real(omega)\n",
-    "# frequency = np.imag(omega)/(2*np.pi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # #\n",
-    "\n",
-    "# freq1 = np.where(frequency>=0)     # eliminating negative frequencies\n",
-    "# amplitude1 = amplitude[freq1]  # eliminating amplitudes corresponding to -ve frequencies\n",
-    "# d1 = d[freq1]    # similar operations below for different parameters\n",
-    "# omega1 = omega[freq1]\n",
-    "# growth1 = growth[freq1]\n",
-    "# # weigh1 = weigh[freq1]\n",
-    "# # modeNorm1 = modeNorm[:,freq1]\n",
-    "# # frequency1 = frequency[freq1]\n",
-    "# # Xplus = X[:freq1]"
+    "end = time.time()\n",
+    "print(end - start)"
    ]
   }
  ],
