--- a/cDMD.ipynb
+++ b/cDMD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,21 +66,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.2393717765808105\n"
+     ]
+    }
+   ],
    "source": [
     "# cDMD\n",
+    "start = 0\n",
+    "end = 0\n",
+    "import time\n",
+    "start = time.time()\n",
     "\n",
-    "[Uc, Sc, Vc] = np.linalg.svd(y1, full_matrices=False, compute_uv=True, hermitian=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "[Uc, Sc, Vc] = np.linalg.svd(y1, full_matrices=False, compute_uv=True, hermitian=False)\n",
+    "\n",
     "menergyc = 0.0\n",
     "for i in range(0, np.size(Sc)):\n",
     "    menergyc += Sc[i]/np.sum(Sc)\n",
@@ -88,75 +93,41 @@
     "        break\n",
     "    rc = i\n",
     "    \n",
-    "menergyc, rc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "menergyc, rc\n",
+    "\n",
     "Atildec = Uc[:, :rc].T @ y2 @ Vc[:, :rc] * np.reciprocal(Sc[: rc])\n",
-    "[eivValc,eivVecc] = np.linalg.eig(Atildec)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Atildec.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "[eivValc,eivVecc] = np.linalg.eig(Atildec)\n",
+    "\n",
     "phic = x2 @ Vc[:rc, :].T @ np.diag(np.reciprocal(Sc[: rc])) @ eivVecc\n",
-    "bc = np.linalg.lstsq(phic, x1[:, 0])\n",
-    "vandermodeVc = np.vander(eivValc)\n",
-    "eivarrayc = np.diag(eivValc)"
+    "\n",
+    "end = time.time()\n",
+    "print(end - start)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "bc[0].shape, phic.shape, vandermodeVc.shape, eivarrayc.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39.19547438621521\n"
+     ]
+    }
+   ],
    "source": [
     "# DMD\n",
     "\n",
-    "[U, S, V] = np.linalg.svd(x1, full_matrices=False, compute_uv=True, hermitian=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "S[:r]#.shape, S[: rc].shape, V[:, :rc].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "start = 0\n",
+    "end = 0\n",
+    "\n",
+    "import time\n",
+    "start = time.time()\n",
+    "\n",
+    "[U, S, V] = np.linalg.svd(x1, full_matrices=False, compute_uv=True, hermitian=False)\n",
+    "\n",
     "menergy = 0.0\n",
     "for i in range(0, np.size(S)):\n",
     "    menergy += S[i]/np.sum(S)\n",
@@ -164,223 +135,15 @@
     "        break\n",
     "    r = i\n",
     "    \n",
-    "menergy, r"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "U.shape, S.shape, V.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "menergy, r\n",
+    "\n",
     "Atilde = U[:, :r].T @ x2 @ V[:, :r] * np.reciprocal(S[: r])\n",
-    "[eivVal,eivVec] = np.linalg.eig(Atilde)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "[eivVal,eivVec] = np.linalg.eig(Atilde)\n",
+    "\n",
     "phi = x2 @ V[:r, :].T @ np.diag(np.reciprocal(S[: r])) @ eivVec.real # Compute full-state modes of X\n",
-    "eivarray = np.diag(eivVal)\n",
-    "b = np.linalg.lstsq(phi, x1[:, 0]) # Compute amplitudes\n",
-    "vandermodeV = np.vander(eivVal) # Vandermonde matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b[0].shape, phi.shape, vandermodeV.shape, eivarray.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phi[:10, :1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phic[:10, :1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# diff_nrm = np.linalg.norm(phic - phi[:, :16])\n",
-    "# n_phic = np.linalg.norm(phic)\n",
-    "np.linalg.norm(phic)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# n_phi = np.linalg.norm(phi)\n",
-    "np.linalg.norm(phi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diff = phic[:, :4] - phi[:, :4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diff_vec = np.reshape(diff, (diff.shape[0]*diff.shape[1], 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_diff_vec = np.linalg.norm(diff_vec, np.inf)\n",
-    "n_diff_vec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phic_vec = np.reshape(phic[:, :4], (phic.shape[0]*phic.shape[1], 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_phic_vec = np.linalg.norm(phic_vec, np.inf)\n",
-    "n_phic_vec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "phi_vec = np.reshape(phi[:, :4], (phi.shape[0]*phi.shape[1], 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_phi_vec = np.linalg.norm(phi_vec, np.inf)\n",
-    "n_phi_vec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.linalg.norm(data[:, 1:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# DMD\n",
     "\n",
-    "# [U, S, V] = np.linalg.svd(y1, full_matrices=False, compute_uv=True, hermitian=False)\n",
-    "# Atilde = U[:, : r].conj().T @ y2 @ V[:r, :].conj().T * np.reciprocal(S[: r])\n",
-    "# U[:, : r].conj().T @ np.dot(x2.T, x2) @ V[: r, :].conj().T * np.reciprocal(S[: r])\n",
-    "# Atilde = np.dot(Atilde.T, Atilde)\n",
-    "# [eivVal,eivVec] = np.linalg.eig(Atilde)\n",
-    "# eivVal_sorted = -np.sort(-eivVal)\n",
-    "# eivarray = np.diag(eivVal)\n",
-    "# psi = y2 @ V[:r, :].conj().T @ np.diag(np.reciprocal(S[: r])) @ eivVec # / np.tile(np.transpose(eivarray),(np.size(y1,1),1)) \n",
-    "# d = X1, y1[:,0] # scales\n",
-    "# d = np.linalg.solve(X1.T.dot(X1), X1.T.dot(y1))\n",
-    "# amplitude = np.abs(d)\n",
-    "# X=X1*np.diag(d) # scaled DMD modes\n",
-    "# sp_modes = y2 @ V[:r, :].conj().T @ np.diag(np.reciprocal(S[: r])) @ eivVec\n",
-    "# A = psi @ np.diag(eivVal) #@ np.linalg.pinv(X1)\n",
-    "# end of DMD"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# modeNorm = np.zeros(r)\n",
-    "# for i in range(0, r-1):\n",
-    "#     modeNorm[i] = np.linalg.norm(X[:,i]) # norm of each mode\n",
-    "\n",
-    "# mag = np.absolute(eivarray)\n",
-    "# weigh = mag[1:-1]/np.sum(mag)\n",
-    "# delta_t = 1/frame_rate   \n",
-    "# omega = np.log(eivarray)/delta_t\n",
-    "# growth = np.real(omega)\n",
-    "# frequency = np.imag(omega)/(2*np.pi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # #\n",
-    "\n",
-    "# freq1 = np.where(frequency>=0)     # eliminating negative frequencies\n",
-    "# amplitude1 = amplitude[freq1]  # eliminating amplitudes corresponding to -ve frequencies\n",
-    "# d1 = d[freq1]    # similar operations below for different parameters\n",
-    "# omega1 = omega[freq1]\n",
-    "# growth1 = growth[freq1]\n",
-    "# # weigh1 = weigh[freq1]\n",
-    "# # modeNorm1 = modeNorm[:,freq1]\n",
-    "# # frequency1 = frequency[freq1]\n",
-    "# # Xplus = X[:freq1]"
+    "end = time.time()\n",
+    "print(end - start)"
    ]
   }
  ],
