full field reconstruction

--- a/cDMD.ipynb
+++ b/cDMD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,18 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_shape = (x1.shape[1], x1.shape[0])\n",
     "percent_Trunc = 0.90\n",
-    "frame_rate = 1/2.5e-05"
+    "Frate = 1/2.5e-05\n",
+    "dt = 2.5e-05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,17 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5.2393717765808105\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cDMD\n",
     "start = 0\n",
@@ -99,6 +92,10 @@
     "[eivValc,eivVecc] = np.linalg.eig(Atildec)\n",
     "\n",
     "phic = x2 @ Vc[:rc, :].T @ np.diag(np.reciprocal(Sc[: rc])) @ eivVecc\n",
+    "bc = np.linalg.lstsq(phic, x1[:, 0])\n",
+    "\n",
+    "num_modesc = phic.shape[1]\n",
+    "omegac = np.log(eivValc) / dt\n",
     "\n",
     "end = time.time()\n",
     "print(end - start)"
@@ -106,17 +103,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "39.19547438621521\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "## Reconstruct the field\n",
+    "\n",
+    "num_stepsc = 2000\n",
+    "time_dynamicsc = np.zeros((num_modesc, num_stepsc), dtype=np.complex128)\n",
+    "for i in range(num_stepsc):\n",
+    "    time_dynamicsc[:, i] = bc[0] * np.exp(omegac * i)\n",
+    "\n",
+    "reconstructed_fieldc = phic @ time_dynamicsc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# DMD\n",
     "\n",
@@ -140,10 +145,30 @@
     "Atilde = U[:, :r].T @ x2 @ V[:, :r] * np.reciprocal(S[: r])\n",
     "[eivVal,eivVec] = np.linalg.eig(Atilde)\n",
     "\n",
-    "phi = x2 @ V[:r, :].T @ np.diag(np.reciprocal(S[: r])) @ eivVec.real # Compute full-state modes of X\n",
+    "phi = x2 @ V[:r, :].T @ np.diag(np.reciprocal(S[: r])) @ eivVec # Compute full-state modes of X\n",
+    "b = np.linalg.lstsq(phi, x1[:, 0])\n",
+    "\n",
+    "num_modes = phi.shape[1]\n",
+    "omega = np.log(eivVal) / dt\n",
     "\n",
     "end = time.time()\n",
     "print(end - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Reconstruct the field\n",
+    "\n",
+    "num_steps = 2000\n",
+    "time_dynamics = np.zeros((num_modes, num_steps), dtype=np.complex128)\n",
+    "for i in range(num_steps):\n",
+    "    time_dynamics[:, i] = b[0] * np.exp(omega * i)\n",
+    "\n",
+    "reconstructed_field = phi @ time_dynamics"
    ]
   }
  ],
