--- a/cDMD.ipynb
+++ b/cDMD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +67,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.423640012741089\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sumuk\\AppData\\Local\\Temp\\ipykernel_16956\\1308613788.py:22: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  bc = np.linalg.lstsq(phic, x1[:, 0])\n",
+      "C:\\Users\\sumuk\\AppData\\Local\\Temp\\ipykernel_16956\\1308613788.py:25: RuntimeWarning: invalid value encountered in log\n",
+      "  omegac = np.log(eivValc) / dt\n"
+     ]
+    }
+   ],
    "source": [
     "# cDMD\n",
     "start = 0\n",
@@ -103,25 +122,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Reconstruct the field\n",
-    "\n",
-    "num_stepsc = 2000\n",
-    "time_dynamicsc = np.zeros((num_modesc, num_stepsc), dtype=np.complex128)\n",
-    "for i in range(num_stepsc):\n",
-    "    time_dynamicsc[:, i] = bc[0] * np.exp(omegac * i)\n",
-    "\n",
-    "reconstructed_fieldc = phic @ time_dynamicsc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41.52670383453369\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sumuk\\AppData\\Local\\Temp\\ipykernel_16956\\1158266998.py:24: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
+      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
+      "  b = np.linalg.lstsq(phi, x1[:, 0])\n"
+     ]
+    }
+   ],
    "source": [
     "# DMD\n",
     "\n",
@@ -157,18 +177,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Reconstruct the field\n",
+    "## Reconstruction of the data\n",
     "\n",
-    "num_steps = 2000\n",
-    "time_dynamics = np.zeros((num_modes, num_steps), dtype=np.complex128)\n",
-    "for i in range(num_steps):\n",
-    "    time_dynamics[:, i] = b[0] * np.exp(omega * i)\n",
-    "\n",
-    "reconstructed_field = phi @ time_dynamics"
+    "def recon(phi, b, omega, num_steps, r):\n",
+    "    time_dynamics = np.zeros((r, num_steps), dtype=complex)\n",
+    "    for i in range(num_steps):\n",
+    "        time_dynamics[:, i] = b[0] * np.exp(omega * i)\n",
+    "    return phi @ time_dynamics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reconstructed_fieldc = recon(phic, bc, omegac, 2000, rc)\n",
+    "reconstructed_field = recon(phi, b, omega, 2000, r)"
    ]
   }
  ],
